<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tw.edu.ym.guid</groupId>
	<artifactId>guid-querier</artifactId>
	<version>3.0.6</version>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<name>guid-querier</name>

	<organization>
		<name>Panmed</name>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<javafx.version>23.0.1</javafx.version>
		<slf4j.version>2.0.16</slf4j.version>
		<mainClass>tw.edu.ym.guid.querier.MainApp</mainClass>
	</properties>

	<dependencies>
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.avaje</groupId>
			<artifactId>ebean</artifactId>
			<version>2.7.1</version>
		</dependency>
		<dependency>
			<groupId>net.sf.rubycollect4j</groupId>
			<artifactId>rubycollect4j</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>5.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- SLF4J API -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.32</version>
		</dependency>

		<!-- Log4j 1.x 实现 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.32</version>
		</dependency>

		<!-- Log4j 1.x -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
			<!--      <classifier>mac-aarch64</classifier>-->
			<classifier>win</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
			<!--      <classifier>mac-aarch64</classifier>-->
			<classifier>win</classifier>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.4.0-jre</version>
		</dependency>
		<dependency>
			<groupId>com.github.wnameless</groupId>
			<artifactId>workbook-accessor</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>2.11.5</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.174</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Maven Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<release>${java.version}</release>
				</configuration>
			</plugin>

			<!-- Spring Boot Maven Plugin  -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- jpackage Maven Plugin -->
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.6.4</version>
				<executions>
					<execution>
						<id>create-package</id>
						<phase>package</phase>
						<goals>
							<goal>jpackage</goal>
						</goals>
						<configuration>
							<!-- Main JAR -->
							<input>${project.build.directory}</input>
							<mainJar>${project.artifactId}-${project.version}.jar</mainJar>
							<mainClass>org.springframework.boot.loader.launch.JarLauncher</mainClass>

							<!-- Application Details -->
							<name>${project.name}</name>
							<appVersion>${project.version}</appVersion>
							<vendor>${project.organization.name}</vendor>

							<!-- Packaging Type -->
							<!-- <type>DMG</type> -->
							<type>EXE</type>

							<!-- Icon -->
							<!--              <icon>${project.basedir}/src/main/resources/icons/app.icns</icon>-->
							<icon>${project.basedir}/src/main/resources/icons/q.ico</icon>

							<destination>${project.build.directory}/jpackage</destination>

							<!-- Java Options and JVM Arguments -->
							<javaOptions>
								<javaOption>--enable-preview</javaOption> <!-- Example JVM option -->
								<javaOption>-Xmx1024m</javaOption>
							</javaOptions>

						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>